# Aegis-Shield

./: .gitignore  .isort.cfg  README.md  pyproject.toml
aegis_shield/: main.py  pipeline_executor.py
aegis_shield/common/: io_utils.py  question_paraphaser.py
aegis_shield/evaluation/: base.py  classification_evaluator.py  cosine_similarity_eval.py
aegis_shield/tasks/: api_tester.py  question_paraphaser.py
aegis_shield/utils/: config_loader.py  embeddings.py  registry.py
config/: paraphase_questions.yaml  service_test.yaml
data/: test_data.csv
